# bleat

./: .gitignore  .pre-commit-config.yaml  Makefile  package.json  pyproject.toml
.github/workflows/: ci.yaml  publish.yaml
src/bleat/: main.py  t.json  t.md
src/bleat/command/: google_api.py
src/bleat/util/: common.py
